@@ -1,3 +1,9 @@
+2009-07-17  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* _mingw_mac.h: Do not ifdef-guard the version macros.
+	(STRINGIFY): New macro.
+	(__MINGW64_VERSION): Auto-define using STRINGIFY.
+
 2009-07-17  Kai Tietz  <kai.tietz@onevision.com>
 
 	* _mingw_mac.h: New file. It defines just macros also useful in
